<resources>
    <string name="app_name">BookShelf</string>

    <string name="action_settings">Settings</string>
    <string name="str_clear_all">Delete all</string>
    <string name="str_exit">Exit</string>

    <string name="str_add_genre">Add genre</string>
    <string name="str_add_book">Add book</string>
    <string name="str_add_author">Add author</string>
    <string name="str_title_add_author">Add new author</string>
    <string name="str_title_genre_add">Add new genre</string>
    <string name="str_add_btn">Add</string>
    <string name="str_cancel_btn">Cancel</string>
    <string name="str_ok">OK</string>

    <string name="str_hint_genre">Put genre here</string>
    <string name="str_hint_book_name">Enter book name here</string>
    <string name="str_hint_author_name">Name(cannot be empty)</string>
    <string name="str_hint_author_lastName">Lastname</string>
    <string name="str_hint_book_size">Enter book size here</string>
    <string name="str_hint_isbn">Enter ISBN here</string>

    <string name="empty_genre_name_feild">Genre name cannot be empty</string>
    <string name="empty_author_name_feild">Author Name cannot be empty</string>
    <string name="empty_field">Fill all fields</string>

    <string name="str_btn_cover">Select cover</string>

    <string name="str_book_name">Book name</string>
    <string name="str_authors">Authors</string>
    <string name="str_genre">Genre</string>
    <string name="str_size">Book size</string>
    <string name="str_isbn">ISBN</string>
    <string name="str_back">Back</string>
    <string name="str_edit">Edit</string>
    <string name="title_activity_book">Book</string>
    <string name="err_too_many_authors"> Too many authors</string>


</resources>
